--- a/src/styles.css
+++ b/src/styles.css
@@ -22,18 +22,27 @@ body {
 
 h1,
 h2,
-h3 {
+h3,
+h4 {
   text-align: center;
   margin: 0;
 }
 
-h2 {
+#greeting {
   font-size: 48px;
+}
+
+#heading {
+  font-size: 80px;
 }
 
 h3 {
   font-size: 24px;
   opacity: 0.7;
+}
+
+#about-heading {
+  font-size: 120px;
 }
 
 #launch-btn {
@@ -67,4 +76,27 @@ h3 {
 
 .hover-color:hover {
   color: blue;
+}
+
+@media (max-width: 600px) {
+  #heading {
+    font-size: 50px;
+  }
+  #greeting {
+    font-size: 35px;
+  }
+  #about-heading {
+    font-size: 70px;
+  }
+  p {
+    font-size: 12px;
+    text-align: center;
+  }
+  h5 {
+    text-align: center;
+  }
+  #launch-btn {
+    display: block;
+    margin: 0 auto;
+  }
 }
